[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = PCGC regression
download_url = https://github.com/limix/pcgc
keywords = heritability, liability, case-control
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = pcgc
url = https://github.com/limix/pcgc
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=3.0
install_requires =
    brent-search>=1.0.32
    numpy>=1.14.0
    pytest-pep8>=1.0.6
    pytest>=3.3.2
    scipy>=1.0.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --pep8
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402
